# diablo

./: Cargo.toml  README.md
src/: args.rs  elf.rs  lib.rs  main.rs  pattern.rs  rop.rs  scan.rs
tests/: cli.rs
