[package]
name = "diablo"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Swiss army knife of CLI hacking tools."
readme = "README.md"
homepage = "https://github.com/mmore21/diablo"
repository = "https://github.com/mmore21/diablo"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
predicates = "2.1.5"
